--- a/BeFit/app/build.gradle
+++ b/BeFit/app/build.gradle
@@ -16,6 +16,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures{
+        compose = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,6 +33,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    composeOptions{
+        kotlinCompilerExtensionVersion = '1.3.0-rc01'
+    }
 }
 
 dependencies {
@@ -40,4 +48,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Jetpack Compose
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.compose.material:material:1.2.0'
+    implementation 'androidx.compose.animation:animation:1.2.0'
+    implementation 'androidx.compose.ui:ui-tooling:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+
+    implementation "com.google.android.material:compose-theme-adapter:1.1.15"
+    implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
+
 }
