--- a/BeFit/app/build.gradle
+++ b/BeFit/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
     implementation "com.google.android.material:compose-theme-adapter:1.1.15"
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
 
+    implementation "androidx.fragment:fragment:1.5.1"
+    implementation "androidx.fragment:fragment-ktx:1.5.1"
+
 }
